--- a/primerversion.html
+++ b/primerversion.html
@@ -6,11 +6,18 @@
 <BODY>
 <P>
 Git fue creado pensando en la eficiencia y la confiabilidad del mantenimiento de
-versiones de aplicaciones cuando ¨¦stas tienen un gran n¨²mero de archivos de c¨®digo
+versiones de aplicaciones cuando Â¨Â¦stas tienen un gran nÂ¨Â²mero de archivos de cÂ¨Â®digo
 fuente, es decir Git nos proporciona las herramientas para desarrollar un trabajo en
-equipo de manera inteligente y r¨¢pida y por trabajo nos referimos a alg¨²n software
-o p¨¢gina que implique c¨®digo el cual necesitemos hacerlo con un grupo de
+equipo de manera inteligente y rÂ¨Â¢pida y por trabajo nos referimos a algÂ¨Â²n software
+o pÂ¨Â¢gina que implique cÂ¨Â®digo el cual necesitemos hacerlo con un grupo de
 personas
 </P>
+  
+  <P>
+    â€œLos Sistemas de Control de Versiones Distribuidos (DVCS) salvan este problema.
+Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar o
+Darcs. En este tipo de herramientas, los clientes replican completamente el
+repositorio.â€
+  </P>
 </BODY>
 </HTML>
